--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+@keyframes marquee {
+    from { transform: translateX(100%); }
+    to { transform: translateX(-100%); }
+}
+
+.marquee {
+    display: inline-block;
+    animation: marquee 10s linear infinite;
+    white-space: nowrap;
+}
+
 
 
 h1, h2, h3, h4, h5, a {
